Fixed some layout issues and got mouse over events for thumbnails

--- a/page/styles.css
+++ b/page/styles.css
@@ -79,6 +79,19 @@ div
     overflow: auto;
     width: 20%;
     }
+#thumbnailDescription
+{
+    text-align: center;
+    position: absolute;
+    top:  95%;
+    right: 0;
+    bottom: 0%;
+    overflow: auto;
+    width: 20%;
+    filter:alpha(opacity=0);
+    -moz-opacity:0;
+    margin-top: 10px;
+}
 #imagetitlearea
     {
     text-align: center;
@@ -116,16 +129,6 @@ div
     }
     
 #buttonDescription
-{
-    width: 100%;
-    height: 3em;
-    padding: 2px;
-    filter:alpha(opacity=0);
-    -moz-opacity:0;
-    margin-top: 10px;
-}
-
-#thumbnailDescription
 {
     width: 100%;
     height: 3em;
